# serve

./: .gitignore  LICENSE  README.md  serve.cabal
cli/: Arguments.hs  CliOptions.hs  CliVersion.hs  Main.hs
src/: Lib.hs  Serve.hs
src/Serve/: Responses.hs
