name:                serve
version:             0.1.0.0
synopsis:            A fast and simple static content server
description:         Please see README.md
homepage:            http://github.com/stites/serve#readme
license:             BSD3
license-file:        LICENSE
author:              Sam Stites
maintainer:          sam@stites.io
copyright:           Copyright: (c) 2015-2016 Sam Stites
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable serve
  hs-source-dirs:      cli
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , serve
  default-language:    Haskell2010

test-suite serve-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , serve
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stites/serve
